tests/conformance/negative/27-invalid-bare-attribute.sml
<!-- Error: only required may be written as a bare attribute -->
<skill define="contract" name="invalid-bare-attribute">
  <field name="title" type />
</skill>
